--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,26 @@
-Werkzeug<1
+alembic==1.4.3
+astroid==2.4.2
+click==7.1.2
 Flask==1.0.2
+Flask-Login==0.5.0
+Flask-Migrate==2.5.3
+Flask-Session==0.3.0
+Flask-SQLAlchemy==2.4.4
+isort==5.5.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+Mako==1.1.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+pylint==2.6.0
 PyMySQL==0.9.3
-Flask-Session==0.3
+python-dateutil==2.8.1
+python-dotenv==0.14.0
+python-editor==1.0.4
+six==1.15.0
+SQLAlchemy==1.3.19
+toml==0.10.1
+typed-ast==1.4.1
+Werkzeug==0.16.1
+wrapt==1.12.1
