--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 alembic==1.4.3
 astroid==2.4.2
+autopep8==1.5.4
 click==7.1.2
 dnspython==2.0.0
 email-validator==1.1.1
 Flask==1.0.2
+flask-file-upload==0.1.5
 Flask-Login==0.5.0
 Flask-Migrate==2.5.3
 Flask-Session==0.3.0
@@ -17,6 +19,7 @@ lazy-object-proxy==1.4.3
 Mako==1.1.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+pycodestyle==2.6.0
 pylint==2.6.0
 PyMySQL==0.9.3
 python-dateutil==2.8.1
