--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.20.1",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
+    "sweetalert": "^2.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue2-leaflet": "^2.6.0",
