--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,10 @@ click==7.1.2
 dnspython==2.0.0
 email-validator==1.1.1
 Flask==1.0.2
+Flask-Cors==3.0.9
+flask-file-upload==0.1.5
 Flask-Login==0.5.0
+flask-marshmallow==0.14.0
 Flask-Migrate==2.5.3
 Flask-Session==0.3.0
 Flask-SQLAlchemy==2.4.4
